<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/marco" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/marco"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/dialogo_tipo_de_imagen_tv_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dialogo_tipo_de_imagen_tv_texto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <Button
                android:id="@+id/dialogo_tipo_de_imagen_btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_btn_generic"
                android:text="@string/dialogo_tipo_de_imagen_btnCancelar"
                android:textColor="@drawable/selector_txt_boton_redondo" />

            <Button
                android:id="@+id/dialogo_tipo_de_imagen_btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_btn_generic"
                android:text="@string/dialogo_tipo_de_imagen_btnAceptar"
                android:textColor="@drawable/selector_txt_boton_redondo" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>